// $Name$

Image Picker  for D6 in DRUPAL-6--2, 20011-02-17
------------------------------------
by hutch, reorganised files for reduced footprint

Image Picker  for D6 in DRUPAL-6--2, 20011-01-29
------------------------------------
by hutch, improved gallery blocks

Image Picker  for D6 in DRUPAL-6--2, 20011-01-26
------------------------------------
by hutch, added gallery blocks

Image Picker  for D6 in DRUPAL-6--2, 20011-01-24
------------------------------------
by hutch, by hutch, fixed jpeg quality issue #1036216
  fixed rows per page bug #1038288

Image Picker  for D6 in DRUPAL-6--2, 20010-12-21
------------------------------------
by hutch  added PECL uploadprogress support

Image Picker  for D6 in DRUPAL-6--2, 20010-12-13
------------------------------------
by hutch, cleaned up js and themeing

Image Picker  for D6 in DRUPAL-6--2, 20010-11-08
------------------------------------
by hutch, changed img_date field to int, added date format to config

Image Picker  for D6 in DRUPAL-6--2, 20010-11-07
------------------------------------
by hutch, fixed hook_form_alter reference bug and incompatibility with filepicker

Image Picker  for D6 in DRUPAL-6--2, 20010-10-09
------------------------------------
by hutch, improved theming in browse and list
fixed sql count in group table

Image Picker  for D6 in DRUPAL-6--2, 20010-10-06
------------------------------------
by hutch, added groups to Bulk Operations

Image Picker  for D6 in DRUPAL-6--2, 20010-09-23
------------------------------------
by hutch, added Bulk Operations to image list

Image Picker  for D6 in DRUPAL-6--2, 20010-09-18
------------------------------------
by hutch, added IMAGEPICKER_PATH constant

Image Picker  for D6 in DRUPAL-6--2, 20010-09-08
------------------------------------
by hutch, improved iframe integration

Image Picker  for D6 in DRUPAL-6--2, 20010-08-23
------------------------------------
by hutch, improved wysiwyg support

Image Picker  for D6 in DRUPAL-6--2, 20010-08-09