@@ -1,4 +1,3 @@
-/* $Name$ */
 
 #imgp {
   clear: both;
