@@ -1,6 +1,5 @@
 <?php
-// $Name$
-// for D6. Version 2
+
 /**
  * @file
  * Enables permitted roles to upload images for insertion into configured nodes.
